Add input floating label, Update content, Add mobile help center section

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -48001,17 +48001,8 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   font-size: 14px;
   line-height: 20px;
 }
-.dir.rzhf7eq[class][class] {
-  padding: 24px 0;
-}
 .dir.r1y3t7ro[class][class] {
   padding: 24px 0 8px;
-}
-@media (min-width: 375px) {
-  .rzhf7eq[class][class] {
-    font-size: var(--font-size);
-    line-height: var(--line-height-xl);
-  }
 }
 .rzhf7eq[class][class] {
   font-size: var(--font-size);
@@ -48019,6 +48010,15 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   display: grid;
   grid-gap: 16px;
   grid-template-columns: 1fr auto;
+}
+@media (min-width: 375px) {
+  .rzhf7eq[class][class] {
+    font-size: var(--font-size);
+    line-height: var(--line-height-xl);
+  }
+}
+.dir.rzhf7eq[class][class] {
+  padding: 24px 0;
 }
 ._1wnurhp {
   z-index: -1000 !important;
@@ -52051,23 +52051,10 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   margin-left: 0 !important;
   margin-right: 0 !important;
 }
-@media (min-width: 1440px) {
+@media (min-width: 375px) {
   ._le6wlg {
-    max-width: none !important;
-    padding-left: var(--gp-padding-xlargeAndAbove, 80px) !important;
-    padding-right: var(--gp-padding-xlargeAndAbove, 80px) !important;
-  }
-}
-@media (min-width: 1128px) {
-  ._le6wlg {
-    padding-left: var(--gp-padding-largeAndAbove, 80px) !important;
-    padding-right: var(--gp-padding-largeAndAbove, 80px) !important;
-  }
-}
-@media (min-width: 950px) {
-  ._le6wlg {
-    padding-left: var(--gp-padding-mediumPlusAndAbove, 40px) !important;
-    padding-right: var(--gp-padding-mediumPlusAndAbove, 40px) !important;
+    padding-left: var(--gp-padding-smallAndAbove, 24px) !important;
+    padding-right: var(--gp-padding-smallAndAbove, 24px) !important;
   }
 }
 @media (min-width: 744px) {
@@ -52076,10 +52063,23 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
     padding-right: var(--gp-padding-mediumAndAbove, 40px) !important;
   }
 }
-@media (min-width: 375px) {
+@media (min-width: 950px) {
   ._le6wlg {
-    padding-left: var(--gp-padding-smallAndAbove, 24px) !important;
-    padding-right: var(--gp-padding-smallAndAbove, 24px) !important;
+    padding-left: var(--gp-padding-mediumPlusAndAbove, 40px) !important;
+    padding-right: var(--gp-padding-mediumPlusAndAbove, 40px) !important;
+  }
+}
+@media (min-width: 1128px) {
+  ._le6wlg {
+    padding-left: var(--gp-padding-largeAndAbove, 80px) !important;
+    padding-right: var(--gp-padding-largeAndAbove, 80px) !important;
+  }
+}
+@media (min-width: 1440px) {
+  ._le6wlg {
+    max-width: none !important;
+    padding-left: var(--gp-padding-xlargeAndAbove, 80px) !important;
+    padding-right: var(--gp-padding-xlargeAndAbove, 80px) !important;
   }
 }
 .dir.plmw1e5[class][class] {
@@ -67496,4 +67496,276 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   line-height: 24px !important;
   font-weight: 400 !important;
   margin-left: 16px !important;
+}
+
+._1bpiufr {
+    -webkit-box-lines: multiple !important;
+    -webkit-box-pack: start !important;
+    -ms-flex-pack: start !important;
+    -webkit-box-align: stretch !important;
+    -ms-flex-align: stretch !important;
+    display: -webkit-box !important;
+    display: -moz-box !important;
+    display: -ms-flexbox !important;
+    display: -webkit-flex !important;
+    display: flex !important;
+    -webkit-align-items: stretch !important;
+    align-items: stretch !important;
+    -webkit-justify-content: flex-start !important;
+    justify-content: flex-start !important;
+    -webkit-flex-wrap: wrap !important;
+    -ms-flex-wrap: wrap !important;
+    flex-wrap: wrap !important;
+    width: -webkit-calc(100% + 12px) !important;
+    width: -moz-calc(100% + 12px) !important;
+    width: calc(100% + 12px) !important;
+    max-width: 100% !important;
+    margin-left: auto !important;
+    margin-right: auto !important;
+    padding-left: -webkit-calc(24px - 6px) !important;
+    padding-left: -moz-calc(24px - 6px) !important;
+    padding-left: calc(24px - 6px) !important;
+    padding-right: -webkit-calc(24px - 6px) !important;
+    padding-right: -moz-calc(24px - 6px) !important;
+    padding-right: calc(24px - 6px) !important;
+}
+@media (min-width: 375px) {
+  ._1bpiufr {
+    padding-left: -webkit-calc(24px - 6px) !important;
+    padding-left: -moz-calc(24px - 6px) !important;
+    padding-left: calc(24px - 6px) !important;
+    padding-right: -webkit-calc(24px - 6px) !important;
+    padding-right: -moz-calc(24px - 6px) !important;
+    padding-right: calc(24px - 6px) !important;
+    width: -webkit-calc(100% + 12px) !important;
+    width: -moz-calc(100% + 12px) !important;
+    width: calc(100% + 12px) !important;
+  }
+}
+@media (min-width: 744px) {
+  ._1bpiufr {
+    padding-left: -webkit-calc(40px - 8px) !important;
+    padding-left: -moz-calc(40px - 8px) !important;
+    padding-left: calc(40px - 8px) !important;
+    padding-right: -webkit-calc(40px - 8px) !important;
+    padding-right: -moz-calc(40px - 8px) !important;
+    padding-right: calc(40px - 8px) !important;
+    width: -webkit-calc(100% + 16px) !important;
+    width: -moz-calc(100% + 16px) !important;
+    width: calc(100% + 16px) !important;
+  }
+}
+@media (min-width: 950px) {
+  ._1bpiufr {
+    padding-left: -webkit-calc(40px - 8px) !important;
+    padding-left: -moz-calc(40px - 8px) !important;
+    padding-left: calc(40px - 8px) !important;
+    padding-right: -webkit-calc(40px - 8px) !important;
+    padding-right: -moz-calc(40px - 8px) !important;
+    padding-right: calc(40px - 8px) !important;
+    width: -webkit-calc(100% + 16px) !important;
+    width: -moz-calc(100% + 16px) !important;
+    width: calc(100% + 16px) !important;
+  }
+}
+@media (min-width: 1128px) {
+  ._1bpiufr {
+    padding-left: -webkit-calc(80px - 8px) !important;
+    padding-left: -moz-calc(80px - 8px) !important;
+    padding-left: calc(80px - 8px) !important;
+    padding-right: -webkit-calc(80px - 8px) !important;
+    padding-right: -moz-calc(80px - 8px) !important;
+    padding-right: calc(80px - 8px) !important;
+    width: -webkit-calc(100% + 16px) !important;
+    width: -moz-calc(100% + 16px) !important;
+    width: calc(100% + 16px) !important;
+  }
+}
+@media (min-width: 1440px) {
+  ._1bpiufr {
+    padding-left: -webkit-calc(80px - 8px) !important;
+    padding-left: -moz-calc(80px - 8px) !important;
+    padding-left: calc(80px - 8px) !important;
+    padding-right: -webkit-calc(80px - 8px) !important;
+    padding-right: -moz-calc(80px - 8px) !important;
+    padding-right: calc(80px - 8px) !important;
+    width: -webkit-calc(100% + 16px) !important;
+    width: -moz-calc(100% + 16px) !important;
+    width: calc(100% + 16px) !important;
+    max-width: 1456px !important;
+  }
+}
+.cgn54y8[class][class] {
+  display: grid;
+  grid-row-gap: 16px;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto auto;
+}
+@media (min-width: 744px) {
+  .cgn54y8[class][class] {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+  }
+}
+.t1y42d9y[class][class] {
+  max-width: 266px;
+}
+@media (min-width: 950px) {
+  .t1y42d9y[class][class] {
+    max-width: 415px;
+  }
+}
+@media (min-width: 744px) {
+  .dir.t1y42d9y[class][class] {
+      margin-bottom: 16px;
+    }
+}
+@media (min-width: 950px) {
+  .dir.t1y42d9y[class][class] {
+      margin-bottom: 8px;
+    }
+}
+.sx9s60z[class][class] {
+  font-size: var(--font-size-xl);
+  line-height: var(--line-height-3xl);
+  font-weight: var(--font-weight-semibold);
+}
+@media (min-width: 375px) {
+  .sx9s60z[class][class] {
+      font-size: 32px;
+      line-height: 36px;
+    }
+}
+@media (min-width: 950px) {
+  .sx9s60z[class][class] {
+      font-size: 42px;
+      line-height: 50.4px;
+    }
+}
+@media (min-width: 1128px) {
+  .sx9s60z[class][class] {
+      font-size: 48px;
+      line-height: 57.6px;
+    }
+}
+@media (min-width: 375px) {
+  .sx9s60z[class][class].dir-ltr[class][class] {
+      -webkit-letter-spacing: -0.01em;
+      -moz-letter-spacing: -0.01em;
+      -ms-letter-spacing: -0.01em;
+      letter-spacing: -0.01em;
+    }
+}
+@media (min-width: 950px) {
+  .sx9s60z[class][class].dir-ltr[class][class] {
+      -webkit-letter-spacing: -0.02em;
+      -moz-letter-spacing: -0.02em;
+      -ms-letter-spacing: -0.02em;
+      letter-spacing: -0.02em;
+    }
+}
+.s3tiguw[class][class] {
+  font-size: var(--font-size);
+  line-height: var(--line-height-xl);
+}
+@media (min-width: 744px) {
+  .s3tiguw[class][class] {
+      font-size: var(--font-size);
+      line-height: var(--line-height-md);
+      display: none;
+    }
+}
+@media (min-width: 950px) {
+  .s3tiguw[class][class] {
+      font-size: 18px;
+      line-height: 23.4px;
+    }
+}
+@media (min-width: 1440px) {
+  .s3tiguw[class][class] {
+      font-size: var(--font-size-lg);
+      line-height: var(--line-height-xxl);
+    }
+}
+.s1ptxv9j[class][class] {
+  display: none;
+}
+@media (min-width: 744px) {
+  .s1ptxv9j[class][class] {
+    display: block;
+  }
+}
+.dir.s3tiguw[class][class] {
+  margin-top: 16px;
+}
+@media (min-width: 950px) {
+  .rzhf7eq[class][class] {
+    font-size: var(--font-size-md);
+    line-height: var(--line-height-xl);
+  }
+}
+@media (min-width: 1440px) {
+  .rzhf7eq[class][class] {
+      font-size: var(--font-size-lg);
+      line-height: var(--line-height-xxl);
+    }
+}
+@media (min-width: 950px) {
+  .ebn7uav[class][class] {
+    font-size: var(--font-size);
+    line-height: var(--line-height-xl);
+  }
+}
+@media (min-width: 1440px) {
+  .ebn7uav[class][class] {
+      font-size: var(--font-size-md);
+      line-height: var(--line-height-2xl);
+    }
+}
+.dir.r1y3t7ro[class][class] {
+  padding: 24px 0 8px 0;
+}
+@media (min-width: 950px) {
+  .dir.r1y3t7ro[class][class] {
+      padding-bottom: 16px;
+    }
+}
+._yqkdtbl {
+  position: relative !important;
+  cursor: text !important;
+  display: flex !important;
+  min-height: 56px !important;
+  width: 100% !important;
+  margin: 0px !important;
+  border: none !important;
+  color: rgb(34, 34, 34) !important;
+  background-color: rgb(255, 255, 255) !important;
+  border-radius: 8px !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+  font-weight: 400 !important;
+  outline: none !important;
+  box-shadow: rgb(34 34 34) 0px 0px 0px 2px inset !important;
+}
+._c5rhl5 {
+  width: 100% !important;
+  border: none !important;
+  outline: none !important;
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+  padding-top: 0 !important;
+  padding-bottom: 0 !important;
+  margin-left: 12px !important;
+  margin-right: 12px !important;
+  margin-top: 26px !important;
+  margin-bottom: 6px !important;
+  min-height: 1px !important;
+  color: inherit !important;
+  background-color: transparent !important;
+  font-family: inherit !important;
+  font-size: inherit !important;
+  font-weight: inherit !important;
+  line-height: inherit !important;
+  -webkit-appearance: none !important;
 }
