--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -35349,6 +35349,9 @@ a:hover {
   .app-theme__wrapper {
     display: none !important;
   }
+  .app-theme__wrapper.show {
+    display: unset !important;
+  }
 }
 .app-theme__wrapper {
   left: 0 !important;
@@ -35652,6 +35655,15 @@ a:hover {
     width: 100vw !important;
     transition: left 0.3s !important;
     left: 0 !important;
+  }
+  .site-content__page-wrapper.show {
+    position: fixed !important;
+    display: flex !important;
+    overflow: hidden !important;
+    height: 100% !important;
+    width: 100vw !important;
+    transition: left 0.5s ease 0s !important;
+    left: 260px !important;
   }
 }
 @media (min-width: 1128px) {
@@ -42652,6 +42664,19 @@ video::cue {
     max-width: 260px !important;
     left: -260px !important;
     display: none !important;
+  }
+  .app-theme__wrapper.show .app-theme__nav-container {
+      left: 0px !important;
+      position: absolute !important;
+      z-index: 11 !important;
+      top: 0px !important;
+      height: 100% !important;
+      transition: left 0.5s ease 0s !important;
+      background-color: rgb(247, 247, 247) !important;
+      box-shadow: rgb(0 0 0 / 5%) -4px 0px 20px inset !important;
+      width: calc(100% - 55px) !important;
+      max-width: 260px !important;
+      display: unset !important;
   }
 }
 @media (max-width: 743px) {
