--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -67860,3 +67860,207 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   background: #dddddd !important;
   color: #ffffff !important;
 }
+
+
+._12kfhdn {
+  padding: 24px !important;
+  flex: 1 1 auto !important;
+  overflow-y: auto !important;
+  outline: none !important;
+}
+
+._1ijzsyb {
+  color: rgb(34, 34, 34) !important;
+  margin-top: -24px !important;
+}
+
+@media (min-width: 744px) {
+  ._1ijzsyb {
+    -webkit-box-pack: justify !important;
+    display: flex !important;
+    justify-content: space-between !important;
+  }
+}
+
+@media (min-width: 744px) {
+  ._5dhkyy {
+    flex: 0 0 66% !important;
+    margin-left: 16px !important;
+  }
+}
+
+._14i3z6h {
+  color: inherit !important;
+  font-size: 1em !important;
+  font-weight: inherit !important;
+  line-height: inherit !important;
+  margin: 0px !important;
+  padding: 0px !important;
+}
+
+._18dtjc8n {
+  font-size: 18px !important;
+  line-height: 22px !important;
+  font-weight: 800 !important;
+}
+
+@media (min-width: 744px) {
+  ._18dtjc8n {
+    display: block !important;
+    padding-top: 50px !important;
+  }
+}
+
+._ckudf4 {
+  font-size: 16px !important;
+  line-height: 20px !important;
+  font-weight: 400 !important;
+  padding-top: 16px !important;
+  padding-bottom: 16px !important;
+}
+
+._11waoz2 {
+    color: var(--parsed-html-color, #222222) !important;
+    font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif !important;
+    font-weight: 600 !important;
+    text-decoration: underline !important;
+}
+
+@media (min-width: 744px) {
+  ._5dhkyy {
+    flex: 0 0 66% !important;
+    margin-left: 16px !important;
+  }
+}
+
+._tns11i {
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+  font-weight: 600 !important;
+  border-radius: 8px !important;
+  border: none !important;
+  background: transparent !important;
+  color: rgb(113, 113, 113) !important;
+  padding: 10px !important;
+  margin-top: 6px !important;
+  margin-bottom: 6px !important;
+  margin-right: 6px !important;
+  transition: box-shadow 0.2s ease 0s, -ms-transform 0.1s ease 0s, -webkit-transform 0.1s ease 0s, transform 0.1s ease 0s !important;
+  position: relative !important;
+  outline: none !important;
+}
+._tns11i:last-child {
+  margin-right: 0px !important;
+}
+
+._11ee8v7 {
+  height: calc(100vh - 400px) !important;
+  overflow: hidden auto !important;
+  padding: 16px 2px 18px !important;
+}
+
+._1u9fru1 {
+  display: none !important;
+}
+
+._1ny5tm2 {
+  margin-bottom: -16px !important;
+}
+
+._1byskwn {
+  -webkit-box-pack: start !important;
+  -webkit-box-align: stretch !important;
+  display: flex !important;
+  align-items: stretch !important;
+  justify-content: flex-start !important;
+  flex-wrap: wrap !important;
+  width: calc(100% + 12px) !important;
+  margin-left: -6px !important;
+  margin-right: -6px !important;
+}
+
+@media (min-width: 375px)
+{
+  ._1byskwn {
+    margin-left: -6px !important;
+    margin-right: -6px !important;
+    width: calc(100% + 12px) !important;
+}
+}
+
+@media (min-width: 744px)
+{
+  ._1byskwn {
+    margin-left: -8px !important;
+    margin-right: -8px !important;
+    width: calc(100% + 16px) !important;
+}
+}
+
+@media (min-width: 950px)
+{
+  ._1byskwn {
+    margin-left: -8px !important;
+    margin-right: -8px !important;
+    width: calc(100% + 16px) !important;
+}
+}
+
+@media (min-width: 1128px){
+  ._1byskwn {
+    margin-left: -8px !important;
+    margin-right: -8px !important;
+    width: calc(100% + 16px) !important;
+}
+}
+
+@media (min-width: 1440px) {
+  ._1byskwn {
+    margin-left: -8px !important;
+    margin-right: -8px !important;
+    width: calc(100% + 16px) !important;
+}
+}
+
+._18dgbyf {
+  margin-bottom: 16px !important;
+}
+
+._e296pg {
+  position: relative !important;
+}
+
+._1k2xyy0 {
+  position: absolute !important;
+  inset: 0px !important;
+}
+
+._1258d0t {
+  width: 100% !important;
+  height: 100% !important;
+  position: relative !important;
+}
+
+._vvli20 {
+  -webkit-box-pack: center !important;
+  -webkit-box-align: center !important;
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  color: rgb(34, 34, 34) !important;
+  padding: 40px !important;
+  display: flex !important;
+  flex-direction: column !important;
+  align-items: center !important;
+  justify-content: center !important;
+  height: 100% !important;
+  width: 100% !important;
+  border: 1px dashed rgb(34, 34, 34) !important;
+}
+
+._w4erkz {
+  padding-top: 8px !important;
+  font-weight: 600 !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+}
