Add link copied and embed modal copied popup

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -44039,7 +44039,14 @@ video::cue {
   line-height: inherit !important;
   -webkit-appearance: none !important;
 }
-._pabip3::-ms-expand {
+._ei7ywt {
+  position: absolute !important;
+  width: 40px !important;
+  bottom: 156px !important;
+  right: 75% !important;
+  transform: translate(-50%, 0px) !important;
+  z-index: 2 !important;
+}._pabip3::-ms-expand {
   display: none !important;
 }
 ._pabip3:-moz-focusring {
