--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -68166,3 +68166,221 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 ._1bwncnd:not(:first-child) {
   margin-left: 16px !important;
 }
+
+._186jfb2 {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  display: flex !important;
+  flex-direction: column !important;
+  height: calc(100vh - 141px) !important;
+  overflow: hidden !important;
+}
+
+._lsjbxb {
+  background-color: rgb(255, 255, 255) !important;
+  border-bottom: 1px solid transparent !important;
+  flex: 0 0 auto !important;
+  padding: 24px !important;
+  z-index: 1 !important;
+}
+
+._1ktdy1a {
+  flex: 1 1 auto !important;
+  overflow-y: auto !important;
+  padding: 0px 24px 24px !important;
+}
+
+._x5o5nt {
+  -webkit-box-align: center !important;
+  position: relative !important;
+  cursor: text !important;
+  display: flex !important;
+  min-height: unset !important;
+  width: 100% !important;
+  margin: 0px !important;
+  border: none !important;
+  color: rgb(34, 34, 34) !important;
+  background-color: rgb(247, 247, 247) !important;
+  height: unset !important;
+  align-items: center !important;
+  padding: 12px 12px 12px 16px !important;
+  border-radius: 100px !important;
+  box-shadow: rgb(176 176 176) 0px 0px 0px 1px inset !important;
+}
+
+._1a488ly {
+  -webkit-box-align: center !important;
+  display: flex !important;
+  align-items: center !important;
+  max-width: 50% !important;
+  white-space: nowrap !important;
+  margin-right: 8px !important;
+  padding: 0px !important;
+}
+
+._1yw7hpv {
+  position: relative !important;
+  flex: 1 1 0% !important;
+  padding: 0px !important;
+}
+
+._jro6t0 {
+  display: flex !important;
+}
+
+._1oynp31 {
+  width: 100% !important;
+  border: none !important;
+  outline: none !important;
+  margin: 0px 8px 0px 0px !important;
+  min-height: 1px !important;
+  color: rgb(34, 34, 34) !important;
+  background-color: transparent !important;
+  font-family: inherit !important;
+  font-size: 14px !important;
+  font-weight: 400 !important;
+  line-height: 20px !important;
+  appearance: none !important;
+  flex: 1 1 0% !important;
+  padding: 0px !important;
+  text-overflow: ellipsis !important;
+}
+
+._1ktdy1a {
+  flex: 1 1 auto !important;
+  overflow-y: auto !important;
+  padding: 0px 24px 24px !important;
+}
+
+._l70a92 {
+  font-size: 16px !important;
+  line-height: 20px !important;
+  color: rgb(34, 34, 34) !important;
+  font-weight: 600 !important;
+  padding-bottom: 8px !important;
+}
+
+.dir.rcem0st[class][class] {
+  padding-top: 24px;
+  padding-bottom: 24px;
+  border-radius: 1px;
+}
+
+.dir.uyl8mnh[class][class] {
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
+._13xlah4 {
+  cursor: pointer !important;
+}
+
+._jro6t0 {
+  display: flex !important;
+}
+
+._7ytxmo {
+  margin-right: 16px !important;
+}
+
+._gfomxi {
+  -webkit-box-pack: center !important;
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  display: flex !important;
+  flex-direction: column !important;
+  justify-content: center !important;
+  flex: 1 1 auto !important;
+  width: 100% !important;
+}
+
+._10ndlvp {
+  position: relative !important;
+  display: inline-block !important;
+  cursor: pointer !important;
+  padding: 0px !important;
+}
+
+._1yf4i4f {
+  position: absolute !important;
+  opacity: 0 !important;
+}
+
+._41yoza {
+  display: inline-block !important;
+  border-width: 1px !important;
+  border-style: solid !important;
+  border-color: rgb(176, 176, 176) !important;
+  height: 24px !important;
+  width: 24px !important;
+  background: rgb(255, 255, 255) !important;
+  text-align: center !important;
+  overflow: hidden !important;
+  vertical-align: top !important;
+  border-radius: 4px !important;
+}
+
+._gw4xx4 {
+  color: rgb(34, 34, 34) !important;
+  cursor: inherit !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+}
+
+.c1sjhfzr[class][class] {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.t1pii32p[class][class] {
+  justify-content: flex-end;
+}
+
+.dir.c1sjhfzr[class][class] {
+  padding: 0 24px;
+}
+
+@media (min-width: 744px) and (min-height: 475px) {
+  ._vxvq8x.modal-container-options {
+    -webkit-box-align: center !important;
+    padding: 40px !important;
+    align-items: center !important;
+  }
+}
+
+@supports (max-height: -webkit-fill-available) {
+  ._vxvq8x.modal-container-options {
+    max-height: max(-webkit-fill-available, calc(9.77px * 100)) !important;
+  }
+}
+
+._186jfb2 {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  display: flex !important;
+  flex-direction: column !important;
+  height: calc(100vh - 141px) !important;
+  overflow: hidden !important;
+}
+
+@media (min-width: 744px) {
+  ._186jfb2 {
+    height: 50vh !important;
+    max-height: 472px !important;
+  }
+}
+
+._8brq4f {
+  list-style-type: none !important;
+  margin: 0px !important;
+  padding: 0px 24px !important;
+}
+
+._2i3x76 {
+  font-size: 16px !important;
+  line-height: 20px !important;
+  font-weight: 400 !important;
+  margin: 0px 0px 24px !important;
+}
