--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -65559,7 +65559,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   position: relative !important;
   text-decoration: none !important;
   touch-action: manipulation !important;
-  font-family: var(--e-ls-qkw) !important;
+  font-family: 'Circular',-apple-system,'BlinkMacSystemFont','Roboto','Helvetica Neue',sans-serif!important;
   font-size: 16px !important;
   line-height: var(--line-height-md) !important;
   font-weight: var(--font-weight-semibold) !important;
@@ -66248,7 +66248,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 }
 
 .dir.cx1v2qp[class][class] {
-  background-color: var(--f-mkcy-f);
+  background-color: #ffffff;
 }
 
 .cx1v2qp[class][class] {
@@ -67766,6 +67766,246 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   color: rgb(34, 34, 34) !important;
   background-color: rgb(255, 255, 255) !important;
   border-radius: 8px !important;
+}
+
+._1nvgts7s {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  background: rgb(255, 255, 255) !important;
+  position: relative !important;
+  width: 100% !important;
+  max-width: 100vw !important;
+  max-height: 100% !important;
+  display: flex !important;
+  flex-direction: column !important;
+  box-shadow: rgb(0 0 0 / 28%) 0px 8px 28px !important;
+  border-top-left-radius: 12px !important;
+  border-top-right-radius: 12px !important;
+  animation-duration: 400ms !important;
+  animation-iteration-count: 1 !important;
+  animation-fill-mode: both !important;
+  animation-name: keyframe_d37zz3 !important;
+  height: 100% !important;
+  min-width: 100% !important;
+}
+
+
+@media (min-width: 744px) {
+  ._1nvgts7s {
+    width: 100% !important;
+    max-width: 568px !important;
+    border-radius: 12px !important;
+  }
+}
+
+._1w4ek5c {
+  height: 100% !important;
+  display: flex !important;
+  max-width: 1440px !important;
+  margin: 0px auto !important;
+}
+
+@media (min-width: 1128px) {
+  ._1w4ek5c {
+    padding-left: 32px !important;
+    padding-right: 32px !important;
+  }
+}
+
+._meb44z {
+  width: 100% !important;
+}
+
+@media (min-width: 1128px) {
+  ._meb44z {
+    -webkit-box-pack: center !important;
+    -webkit-box-direction: normal !important;
+    -webkit-box-orient: horizontal !important;
+    display: flex !important;
+    flex-direction: row !important;
+    margin: auto 0px !important;
+    justify-content: center !important;
+  }
+}
+
+._8hh3ld {
+  overflow: hidden !important;
+  text-align: center !important;
+  position: relative !important;
+  width: 100% !important;
+  min-width: 100% !important;
+}
+
+@media (min-width: 1128px) {
+  ._8hh3ld {
+    width: calc(70% - 48px) !important;
+    min-width: auto !important;
+  }
+}
+
+._1g2tcap {
+  width: 100% !important;
+}
+
+@media (min-width: 1128px) {
+  ._1g2tcap {
+    width: 30% !important;
+    margin-left: auto !important;
+  }
+}
+
+._1e7tnaz {
+  padding-bottom: calc(66.6667%) !important;
+}
+
+._93wa38 {
+  background: rgb(247, 247, 247) !important;
+  position: absolute !important;
+  height: 100% !important;
+  width: 100% !important;
+  top: 0px !important;
+  left: 0px !important;
+  overflow: hidden !important;
+}
+
+._1dneyga {
+  display: block !important;
+  max-width: 100% !important;
+  max-height: 100% !important;
+  position: absolute !important;
+  left: 50% !important;
+  transform: translate(-50%, -50%) !important;
+  top: 50% !important;
+}
+
+._bm1d2nm {
+  display: inline-block !important;
+  pointer-events: none !important;
+  position: absolute !important;
+  left: 50% !important;
+  transform: translate(-50%, -50%) !important;
+  top: 50% !important;
+  max-width: 100% !important;
+  max-height: 100% !important;
+  z-index: 1 !important;
+  transition: opacity 0.2s ease 0s !important;
+  opacity: 1 !important;
+}
+
+._hmmjev9 {
+  position: absolute !important;
+  display: inline-block !important;
+  z-index: 1 !important;
+  left: 50% !important;
+  transform: translateX(-50%) !important;
+  top: 12px !important;
+}
+
+._1mwr8eb9 {
+  position: absolute !important;
+  display: inline-block !important;
+  z-index: 1 !important;
+  left: 12px !important;
+  top: 50% !important;
+  transform: translateY(-50%) !important;
+}
+
+._2qv72pc {
+  position: absolute !important;
+  display: inline-block !important;
+  z-index: 1 !important;
+  left: 50% !important;
+  transform: translateX(-50%) !important;
+  bottom: 12px !important;
+}
+
+._osv4jca {
+  position: absolute !important;
+  display: inline-block !important;
+  z-index: 1 !important;
+  right: 12px !important;
+  top: 50% !important;
+  transform: translateY(-50%) !important;
+}
+
+._182mjq01 {
+  -webkit-box-pack: center !important;
+  -webkit-box-align: center !important;
+  appearance: none !important;
+  display: inline-flex !important;
+  border-radius: 50% !important;
+  border: 1px solid rgba(0, 0, 0, 0.08) !important;
+  outline: none !important;
+  margin: 0px !important;
+  padding: 0px !important;
+  color: rgb(34, 34, 34) !important;
+  background-color: rgba(255, 255, 255, 0.9) !important;
+  cursor: pointer !important;
+  touch-action: manipulation !important;
+  align-items: center !important;
+  justify-content: center !important;
+  background-clip: padding-box !important;
+  box-shadow: transparent 0px 0px 0px 1px, transparent 0px 0px 0px 4px, rgb(0 0 0 / 18%) 0px 2px 4px !important;
+  transition: -ms-transform 0.25s ease 0s, -webkit-transform 0.25s ease 0s, transform 0.25s ease 0s !important;
+  width: 32px !important;
+  height: 32px !important;
+}
+
+._182mjq01:not(:focus) {
+  border: 0px !important;
+  clip: rect(0px, 0px, 0px, 0px) !important;
+  clip-path: inset(100%) !important;
+  height: 1px !important;
+  overflow: clip !important;
+  padding: 0px !important;
+  position: absolute !important;
+  white-space: nowrap !important;
+  width: 1px !important;
+}
+
+._2qv72pc {
+  position: absolute !important;
+  display: inline-block !important;
+  z-index: 1 !important;
+  left: 50% !important;
+  transform: translateX(-50%) !important;
+  bottom: 12px !important;
+}
+
+._osv4jca {
+  position: absolute !important;
+  display: inline-block !important;
+  z-index: 1 !important;
+  right: 12px !important;
+  top: 50% !important;
+  transform: translateY(-50%) !important;
+}
+
+._g6eb3r {
+  margin-top: 16px !important;
+}
+
+@media (min-width: 1128px) {
+  ._g6eb3r {
+    margin-right: 16px !important;
+    margin-top: 0px !important;
+  }
+}
+
+._1l8asbu {
+  margin-top: 24px !important;
+}
+
+._13wkz77 {
+  padding-top: 8px !important;
+}
+
+._4ce89o {
+  color: rgb(113, 113, 113) !important;
+  font-weight: 800 !important;
+}
+
+._1wgf3yo {
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif !important;
   font-size: 16px !important;
   line-height: 20px !important;
@@ -67793,4 +68033,98 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   font-weight: inherit !important;
   line-height: inherit !important;
   -webkit-appearance: none !important;
+  color: rgb(34, 34, 34) !important;
+}
+
+._4l12l8 {
+  margin-top: 8px !important;
+}
+
+._1aoj0ap {
+  box-shadow: rgb(176 176 176) 0px 0px 0px 1px inset !important;
+  box-sizing: border-box !important;
+  color: rgb(34, 34, 34) !important;
+  padding: 4px !important;
+  border-radius: 8px !important;
+}
+
+._159914b {
+  color: inherit !important;
+  display: block !important;
+  min-width: 100% !important;
+  max-width: 100% !important;
+  outline: none !important;
+  border: none !important;
+  margin: 0px !important;
+  box-sizing: border-box !important;
+  background-color: transparent !important;
+  appearance: none !important;
+  padding: 8px !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+  font-weight: 400 !important;
+}
+
+.dir.a8jt5op[class][class] {
+  border: 0;
+  padding: 0;
+}
+
+._zgc1p6 {
+  -webkit-box-pack: justify !important;
+  -webkit-box-align: center !important;
+  display: flex !important;
+  flex: 0 0 auto !important;
+  border-top: 1px solid rgb(235, 235, 235) !important;
+  padding: 16px 24px !important;
+  align-items: center !important;
+  justify-content: space-between !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+}
+
+._1t0j0qc {
+  -webkit-box-pack: justify !important;
+  -webkit-box-align: center !important;
+  width: 100% !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: space-between !important;
+}
+
+._jro6t0 {
+  display: flex !important;
+}
+
+._1ku51f04 {
+  cursor: pointer !important;
+  display: inline-block !important;
+  margin: 0px !important;
+  position: relative !important;
+  text-align: center !important;
+  text-decoration: none !important;
+  width: auto !important;
+  touch-action: manipulation !important;
+  font-family: 'Circular',-apple-system,'BlinkMacSystemFont','Roboto','Helvetica Neue',sans-serif!important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+  font-weight: 600 !important;
+  border-radius: 8px !important;
+  outline: none !important;
+  padding: 14px 24px !important;
+  transition: box-shadow 0.2s ease 0s, -ms-transform 0.1s ease 0s, -webkit-transform 0.1s ease 0s, transform 0.1s ease 0s !important;
+  -webkit-tap-highlight-color: transparent !important;
+  border: none !important;
+  background: #222222 !important;
+  color: #ffffff !important;
+  contain: paint !important;
+}
+
+._1ku51f04:disabled {
+  cursor: not-allowed !important;
+  opacity: 1 !important;
+  border: none !important;
+  background: #dddddd !important;
+  color: #ffffff !important;
 }
