--- a/assets/css/places.css
+++ b/assets/css/places.css
@@ -1,3 +1,4 @@
+
 ._1ugan3i {
   position: fixed !important;
   top: 0px !important;
@@ -47,7 +48,20 @@
   margin: 0px auto 16px !important;
 }
 
+@media (max-width: 743px) {
+  ._vfwjg3, ._2b0qwl {
+    display: block;
+  }
+
+  .place__container-img-container {
+    display: none;
+  }
+}
+
 @media (min-width: 744px) {
+  ._vfwjg3, ._2b0qwl {
+    display: none!important;
+  }
   ._40iwxv {
     padding: 40px !important;
     height: 65vh !important;
@@ -330,4 +344,98 @@
   margin: 0px !important;
   padding: 0px 0px 0px 8px !important;
   left: 0px !important;
+}
+
+
+ .swiper {
+   width: 100%;
+   height: 100%;
+  position: absolute!important;
+ }
+
+ .swiper-slide {
+   text-align: center;
+   font-size: 18px;
+   background: #fff;
+
+   /* Center slide text vertically */
+   display: -webkit-box;
+   display: -ms-flexbox;
+   display: -webkit-flex;
+   display: flex;
+   -webkit-box-pack: center;
+   -ms-flex-pack: center;
+   -webkit-justify-content: center;
+   justify-content: center;
+   -webkit-box-align: center;
+   -ms-flex-align: center;
+   -webkit-align-items: center;
+   align-items: center;
+ }
+
+ .swiper-slide img {
+   display: block;
+   width: 100%;
+   height: 100%;
+   object-fit: cover;
+ }
+
+.swiper-pagination-bullet-active {
+  background: white!important;
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+  position: absolute;
+  top: 50%;
+  width: calc(var(--swiper-navigation-size)/ 44 * 27);
+  height: var(--swiper-navigation-size);
+  margin-top: calc(0px - (var(--swiper-navigation-size)/ 2));
+  z-index: 10;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--swiper-navigation-color, var(--swiper-theme-color));
+}
+.swiper-button-next:before,
+.swiper-button-prev:before {
+content: "" !important;
+  display: block !important;
+  position: absolute !important;
+  top: 50% !important;
+  left: 50% !important;
+  transform: translate(-50%, -50%) !important;
+  width: 32px !important;
+  height: 32px !important;
+  border-radius: 50% !important;
+  background: rgb(255, 255, 255) !important;
+  box-shadow: rgb(0 0 0 / 18%) 0px 1px 2px, rgb(0 0 0 / 18%) 0px 2px 4px !important;
+}
+
+
+
+
+.swiper-button-next:after,
+.swiper-button-prev:after {
+
+  /* content: "" !important; */
+  display: block !important;
+  position: absolute !important;
+  top: 50% !important;
+  left: 50% !important;
+  transform: translate(-50%, -50%) !important;
+  width: 32px !important;
+  height: 32px !important;
+  border-radius: 50% !important;
+  background: rgb(255, 255, 255) !important;
+  box-shadow: rgb(0 0 0 / 18%) 0px 1px 2px,
+  rgb(0 0 0 / 18%) 0px 2px 4px !important;
+
+  text-align: center;
+  font-size: medium;
+  color: black;
+  font-weight: 900;
+    font-size: small !important;
+    padding-top: 10px;
 }
