Fix modals for wishlists

--- a/assets/css/wishlist.css
+++ b/assets/css/wishlist.css
@@ -171,3 +171,122 @@
 ._g2ext {
   display: none;
 }
+
+._1u5lyjm {
+  -webkit-box-pack: justify !important;
+  display: flex !important;
+  width: 100% !important;
+  justify-content: space-between !important;
+}
+
+@supports (max-height: -webkit-fill-available) 
+{
+  ._virdaj {
+    max-height: max(-webkit-fill-available, calc(var(--vh, 1vh) * 100)) !important;
+  }
+}
+
+._2f11rw {
+  padding-left: 16px !important;
+}
+
+._17er5s9 {
+  -webkit-box-align: center !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+  align-items: center !important;
+  color: rgb(34, 34, 34) !important;
+  display: flex !important;
+}
+
+._udzbwj {
+  font-weight: 600 !important;
+  padding-right: 8px !important;
+}
+
+._1thnfbs8 {
+  box-sizing: border-box !important;
+  cursor: pointer !important;
+  text-align: center !important;
+  position: relative !important;
+  border: 0px !important;
+  color: rgb(34, 34, 34) !important;
+  padding: 0px !important;
+  border-radius: 50% 4px 4px 50% !important;
+  background: rgb(247, 247, 247) !important;
+}
+
+._1nmnz1zg {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  -webkit-box-pack: center !important;
+  -webkit-box-align: center !important;
+  margin-left: 1px !important;
+  margin-right: 1px !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  flex-direction: column !important;
+  border-radius: 100% !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+  font-weight: 600 !important;
+  background: rgb(34, 34, 34) !important;
+  border: 1.5px solid rgb(34, 34, 34) !important;
+  color: rgb(255, 255, 255) !important;
+  position: relative !important;
+}
+
+._1nf2vyse {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  -webkit-box-pack: center !important;
+  -webkit-box-align: center !important;
+  margin-left: 1px !important;
+  margin-right: 1px !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  flex-direction: column !important;
+  border-radius: 100% !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+  font-weight: 600 !important;
+  background: rgb(34, 34, 34) !important;
+  border: 1.5px solid rgb(34, 34, 34) !important;
+  color: rgb(255, 255, 255) !important;
+  position: relative !important;
+}
+
+._1esiloo3,._1ifwywb1, ._7179yqh {
+  box-sizing: border-box !important;
+  cursor: pointer !important;
+  text-align: center !important;
+  position: relative !important;
+  border: 0px !important;
+  color: rgb(34, 34, 34) !important;
+  padding: 0px !important;
+  background: rgb(247, 247, 247) !important;
+}
+
+._1gosri9s,._gkknk2q,
+._119nin5s {
+  -webkit-box-direction: normal !important;
+    -webkit-box-orient: vertical !important;
+    -webkit-box-pack: center !important;
+    -webkit-box-align: center !important;
+    margin-left: 1px !important;
+    margin-right: 1px !important;
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center !important;
+    flex-direction: column !important;
+    border-radius: 100% !important;
+    position: relative !important;
+    font-size: 14px !important;
+    line-height: 18px !important;
+    font-weight: 600 !important;
+    color: rgb(34, 34, 34) !important;
+    border: 1.5px solid rgb(247, 247, 247) !important;
+}
+
