--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -68658,3 +68658,149 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   font-weight: 400 !important;
   margin: 0px 0px 24px !important;
 }
+
+._1361gvp {
+  -webkit-box-pack: center !important;
+  -webkit-box-align: end !important;
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: horizontal !important;
+  z-index: 2000 !important;
+  position: fixed !important;
+  inset: 0px !important;
+  max-height: calc(var(--vh, 1vh) * 100) !important;
+  padding-top: 12px !important;
+  display: flex !important;
+  flex-direction: row !important;
+  align-items: flex-end !important;
+  justify-content: center !important;
+}
+@supports (max-height: -webkit-fill-available) {
+  ._1361gvp {
+    max-height: max(-webkit-fill-available, calc(var(--vh, 1vh) * 100)) !important;
+  }
+}
+._zyit6ap {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  background: rgb(255, 255, 255) !important;
+  position: relative !important;
+  width: 100vw !important;
+  max-width: 100vw !important;
+  max-height: 100% !important;
+  display: flex !important;
+  flex-direction: column !important;
+  box-shadow: rgb(0 0 0 / 28%) 0px 8px 28px !important;
+  border-top-left-radius: 12px !important;
+  border-top-right-radius: 12px !important;
+  animation-duration: 400ms !important;
+  animation-iteration-count: 1 !important;
+  animation-fill-mode: both !important;
+  animation-name: keyframe_d37zz3 !important;
+}
+._266d055 {
+  padding-bottom: 80px !important;
+  min-height: 100vh !important;
+}
+._1rabovf {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  position: absolute !important;
+  inset: 64px 0px 80px !important;
+  display: flex !important;
+  flex-direction: column !important;
+}
+@supports (padding: env(safe-area-inset-bottom)) {
+  ._1rabovf {
+    bottom: calc(80px + env(safe-area-inset-bottom)) !important;
+  }
+}
+._yabr07 {
+  max-height: 50% !important;
+  overflow: auto !important;
+}
+._fq5pd5 {
+  -webkit-box-flex: 1 !important;
+  flex-grow: 1 !important;
+  position: relative !important;
+}
+._1ejz4h74 {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  display: flex !important;
+  flex-direction: column !important;
+  margin-left: auto !important;
+  margin-right: auto !important;
+  inset: 0px !important;
+  position: absolute !important;
+  padding-bottom: 0px !important;
+}
+._1y26gh8o {
+  background: rgb(255, 255, 255) !important;
+  position: relative !important;
+  text-align: left !important;
+  height: 100% !important;
+}
+._9xlqonb {
+  overflow: hidden scroll !important;
+  border-radius: 3px !important;
+  width: 100% !important;
+  padding-top: 20px !important;
+  height: 100% !important;
+  position: absolute !important;
+  inset: 0px !important;
+}
+._1l06a80 {
+  margin: 16px !important;
+}
+._1ma6qt2 {
+  position: absolute !important;
+  top: -54px !important;
+  right: 24px !important;
+}
+._1ylz08x {
+  background-color: rgb(255, 255, 255) !important;
+  border-top: 1px solid rgb(221, 221, 221) !important;
+  position: fixed !important;
+  bottom: 0px !important;
+  left: 0px !important;
+  width: 100% !important;
+  z-index: 3 !important;
+  max-height: 80px !important;
+}
+@supports (padding: env(safe-area-inset-bottom)) {
+  ._1ylz08x {
+    padding-bottom: env(safe-area-inset-bottom) !important;
+    max-height: calc(80px + env(safe-area-inset-bottom)) !important;
+  }
+}
+._9p0plx {
+  -webkit-box-pack: justify !important;
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: horizontal !important;
+  -webkit-box-align: center !important;
+  color: rgb(34, 34, 34) !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif !important;
+  font-weight: 400 !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+  padding-top: 16px !important;
+  padding-bottom: 16px !important;
+  display: flex !important;
+  align-items: center !important;
+  flex-direction: row !important;
+  justify-content: space-between !important;
+}
+._754m05 {
+  -webkit-box-pack: start !important;
+  -webkit-box-align: start !important;
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  display: flex !important;
+  flex-direction: column !important;
+  align-items: flex-start !important;
+  justify-content: flex-start !important;
+  margin-right: 16px !important;
+}
+._75d5jt {
+  flex-shrink: 2 !important;
+}
