Modal share link, invite others and delete setting

--- a/assets/css/wishlist.css
+++ b/assets/css/wishlist.css
@@ -290,3 +290,80 @@
     border: 1.5px solid rgb(247, 247, 247) !important;
 }
 
+._e0px5r {
+  font-size: 26px !important;
+  line-height: 30px !important;
+  margin-top: 40px !important;
+  margin-bottom: 24px !important;
+  font-weight: 600 !important;
+  color: rgb(34, 34, 34) !important;
+  display: block !important;
+}
+
+._1ywltba {
+  -webkit-box-align: center !important;
+  display: flex !important;
+  align-items: center !important;
+  margin-top: 24px !important;
+  margin-bottom: 24px !important;
+}
+
+._1x7xqyv {
+  max-width: 100% !important;
+  width: 64px !important;
+  height: 64px !important;
+  border-radius: 8px !important;
+  display: inline-block !important;
+  object-fit: cover !important;
+  margin-right: 16px !important;
+}
+
+._1l9dusq {
+  margin-left: 22px !important;
+  margin-right: 22px !important;
+  border-radius: 4px !important;
+  overflow: hidden !important;
+}
+
+._1xzp9wc {
+  font-size: 16px !important;
+  line-height: 20px !important;
+  font-weight: 600 !important;
+  overflow: hidden !important;
+  color: rgb(34, 34, 34) !important;
+  text-overflow: ellipsis !important;
+}
+
+._mnf8sq {
+  width: 100% !important;
+  height: 76px !important;
+  outline: none !important;
+  cursor: pointer !important;
+  border: 1px solid rgb(221, 221, 221) !important;
+  border-radius: 12px !important;
+  box-sizing: border-box !important;
+  background: rgb(255, 255, 255) !important;
+  margin-bottom: 16px !important;
+}
+
+@media (min-width: 1128px) {
+  ._9zsv75f {
+      width: 50% !important;
+      padding-left: 8px !important;
+      padding-right: 8px !important;
+  }
+}
+
+@media (min-width: 950px) {
+  
+  ._9zsv75f {
+    padding-left: 8px !important;
+    padding-right: 8px !important;
+  }
+} 
+
+._lo9vot {
+  font-size: 16px !important;
+  line-height: 20px !important;
+  color: rgb(34, 34, 34) !important;
+}
