Add inline calendar and inline guests counter

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -68804,3 +68804,238 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 ._75d5jt {
   flex-shrink: 2 !important;
 }
+._12to336 {
+  text-align: center !important;
+}
+._36rlri {
+  display: inline-block !important;
+}
+._1ct0t2 {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  -webkit-box-pack: center !important;
+  -webkit-box-align: center !important;
+  margin-left: 1px !important;
+  margin-right: 1px !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  flex-direction: column !important;
+  border-radius: 100% !important;
+  position: relative !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+  border: 1.5px solid rgb(255, 255, 255) !important;
+  color: rgb(72, 72, 72) !important;
+  font-weight: 600 !important;
+  text-decoration: none !important;
+  opacity: 0.25 !important;
+}
+._o3ffkt2 {
+  box-sizing: border-box !important;
+  text-align: center !important;
+  position: relative !important;
+  cursor: default !important;
+  border: 0px !important;
+  color: rgb(34, 34, 34) !important;
+  padding: 0px !important;
+  border-top-left-radius: 50% !important;
+  border-bottom-left-radius: 50% !important;
+  background: rgb(255, 255, 255) !important;
+}
+._o3ffkt2:active {
+  outline: 0px !important;
+}
+._phgqgym {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  -webkit-box-pack: center !important;
+  -webkit-box-align: center !important;
+  margin-left: 1px !important;
+  margin-right: 1px !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  flex-direction: column !important;
+  border-radius: 100% !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+  font-weight: 600 !important;
+  background: rgb(34, 34, 34) !important;
+  border: 1.5px solid rgb(34, 34, 34) !important;
+  color: rgb(255, 255, 255) !important;
+  position: relative !important;
+}
+._phgqgym:hover {
+  background: rgb(34, 34, 34) !important;
+  border: 1.5px solid rgb(113, 113, 113) !important;
+}
+._t3cq320 {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  -webkit-box-pack: center !important;
+  -webkit-box-align: center !important;
+  margin-left: 1px !important;
+  margin-right: 1px !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  flex-direction: column !important;
+  border-radius: 100% !important;
+  position: relative !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+  border: 1.5px solid rgb(255, 255, 255) !important;
+  color: rgb(72, 72, 72) !important;
+  font-weight: 600 !important;
+  text-decoration: none !important;
+  opacity: 0.25 !important;
+}
+._1rqff24 {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  -webkit-box-pack: center !important;
+  -webkit-box-align: center !important;
+  margin-left: 1px !important;
+  margin-right: 1px !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  flex-direction: column !important;
+  border-radius: 100% !important;
+  position: relative !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+  border: 1.5px solid rgb(255, 255, 255) !important;
+  color: rgb(72, 72, 72) !important;
+  font-weight: 600 !important;
+  text-decoration: none !important;
+  opacity: 0.25 !important;
+}
+._2f11rw {
+  padding-left: 16px !important;
+}
+._17er5s9 {
+  -webkit-box-align: center !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+  align-items: center !important;
+  color: rgb(34, 34, 34) !important;
+  display: flex !important;
+}
+._udzbwj {
+  font-weight: 600 !important;
+  padding-right: 8px !important;
+}
+._8zi2u37 {
+  box-sizing: border-box !important;
+  cursor: pointer !important;
+  text-align: center !important;
+  position: relative !important;
+  border: 0px !important;
+  color: rgb(34, 34, 34) !important;
+  padding: 0px !important;
+  border-radius: 50% !important;
+  background: rgb(247, 247, 247) !important;
+}
+._8zi2u37:active {
+  outline: 0px !important;
+}
+._g1ge6vk {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  -webkit-box-pack: center !important;
+  -webkit-box-align: center !important;
+  margin-left: 1px !important;
+  margin-right: 1px !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  flex-direction: column !important;
+  border-radius: 100% !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+  font-weight: 600 !important;
+  background: rgb(34, 34, 34) !important;
+  border: 1.5px solid rgb(34, 34, 34) !important;
+  color: rgb(255, 255, 255) !important;
+  position: relative !important;
+}
+._12glnvbt {
+  box-sizing: border-box !important;
+  cursor: pointer !important;
+  text-align: center !important;
+  position: relative !important;
+  background: rgb(255, 255, 255) !important;
+  border: 0px !important;
+  color: rgb(34, 34, 34) !important;
+  padding: 0px !important;
+  border-top-left-radius: 4px !important;
+  border-bottom-left-radius: 4px !important;
+}
+._uab5izv {
+  box-sizing: border-box !important;
+  cursor: pointer !important;
+  text-align: center !important;
+  position: relative !important;
+  background: rgb(255, 255, 255) !important;
+  border: 0px !important;
+  color: rgb(34, 34, 34) !important;
+  padding: 0px !important;
+  border-top-right-radius: 4px !important;
+  border-bottom-right-radius: 4px !important;
+}
+._1o05292 {
+  padding: 16px 24px !important;
+  border: 0px !important;
+  margin: 0px !important;
+  display: flex !important;
+  white-space: nowrap !important;
+}
+._1o2zacc:first-child {
+  margin-left: 0px !important;
+}
+._1o2zacc {
+  margin-left: 8px !important;
+}
+._12i6oakv {
+  cursor: pointer !important;
+  text-align: center !important;
+  border: 1px solid rgb(34, 34, 34) !important;
+  outline: none !important;
+  margin: 0px !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif !important;
+  position: relative !important;
+  transition-property: -ms-transform, -webkit-transform, transform, background-color, border-color !important;
+  transition-duration: 0.15s !important;
+  transition-timing-function: ease-in-out !important;
+  padding: 4px 12px !important;
+  min-height: 32px !important;
+  border-radius: 16px !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+  background-color: rgb(247, 247, 247) !important;
+  color: rgb(34, 34, 34) !important;
+}
+._qj94838 {
+  -webkit-box-align: center !important;
+  cursor: pointer !important;
+  text-align: center !important;
+  border: 1px solid rgb(221, 221, 221) !important;
+  background-color: rgb(255, 255, 255) !important;
+  outline: none !important;
+  margin: 0px !important;
+  color: rgb(34, 34, 34) !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif !important;
+  position: relative !important;
+  transition-property: -ms-transform, -webkit-transform, transform, background-color, border-color !important;
+  transition-duration: 0.15s !important;
+  transition-timing-function: ease-in-out !important;
+  padding: 4px 12px !important;
+  min-height: 32px !important;
+  border-radius: 16px !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+  display: inline-flex !important;
+  align-items: center !important;
+}
