fx no 16 - A - new page

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -69361,3 +69361,117 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 ._8adqoa.hidden {
   display: none !important;
 }
+
+._v08k6k {
+  padding-top: 16px !important;
+}
+
+._14i3z6h {
+  color: inherit !important;
+  font-size: 1em !important;
+  font-weight: inherit !important;
+  line-height: inherit !important;
+  margin: 0px !important;
+  padding: 0px !important;
+}
+
+._kedp3u {
+  font-size: 18px !important;
+  line-height: 22px !important;
+  font-weight: 600 !important;
+}
+
+._1dnt01i {
+  display: flex !important;
+  padding-top: 24px !important;
+}
+
+._b328lf {
+  flex: 1 1 0% !important;
+}
+
+._b328lf:first-child {
+  margin-right: 16px !important;
+}
+
+._13ucou1 {
+  border-radius: 12px !important;
+  overflow: hidden !important;
+  display: grid !important;
+  grid-template-columns: 1fr 1fr !important;
+  gap: 2px !important;
+}
+
+._19hruxm {
+  font-size: 14px !important;
+  line-height: 18px !important;
+  font-weight: 400 !important;
+  display: flex !important;
+  padding-top: 8px !important;
+}
+
+._v0gz4uz {
+  padding-top: 133.333% !important;
+  position: relative !important;
+  flex: 1 1 0% !important;
+  background-position: 50% 50% !important;
+  background-repeat: no-repeat !important;
+}
+
+._4626ulj {
+  -webkit-box-pack: center !important;
+  -webkit-box-align: center !important;
+  position: absolute !important;
+  inset: 0px !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+}
+
+._91slf2a {
+  inset: 0px !important;
+  height: 0px !important;
+  width: 0px !important;
+  position: absolute !important;
+}
+
+@supports (object-fit: cover) {
+  ._91slf2a {
+    height: 100% !important;
+    width: 100% !important;
+    position: static !important;
+  }
+}
+
+._10xjrv2u {
+  display: inline-block !important;
+  vertical-align: bottom !important;
+  height: 100% !important;
+  width: 100% !important;
+  position: absolute !important;
+  inset: 0px !important;
+  background-position: 50% 50% !important;
+  background-repeat: no-repeat !important;
+}
+
+@supports (object-fit: cover) {
+  ._10xjrv2u {
+    display: none !important;
+    background-image: none !important;
+  }
+}
+
+._13red39 {
+  padding-top: 64px !important;
+  padding-bottom: 48px !important;
+}
+
+._1dnt01i {
+  display: flex !important;
+  padding-top: 24px !important;
+}
+
+._1sg2u1o {
+  flex: 0 0 auto !important;
+  margin-right: 8px !important;
+}
