fx no 17 - A - add modals

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -69475,3 +69475,39 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   flex: 0 0 auto !important;
   margin-right: 8px !important;
 }
+
+._1tv8hmo {
+  min-height: 40px !important;
+}
+
+._gca4re {
+  font-size: 16px !important;
+  line-height: 20px !important;
+  font-weight: 600 !important;
+  margin-bottom: 12px !important;
+}
+
+._g86r3e {
+  display: inline !important;
+}
+
+._1mm0shk {
+  margin: 16px 0px !important;
+}
+
+._1dsb80r {
+  color: rgb(34, 34, 34) !important;
+  font-weight: 600 !important;
+  text-decoration: underline !important;
+}
+
+._qboyil {
+  text-align: center !important;
+  width: 100% !important;
+}
+
+@media (min-width: 744px) {
+  ._qboyil {
+    text-align: right !important;
+  }
+}
