Adding How to participate - About the host

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -19059,7 +19059,7 @@ ul {
 }
 @media (min-width: 744px) {
   .dir.tq6hspd[class][class] {
-    margin-left: -12px px;
+    margin-left: -12px ;
     margin-right: -12px;
   }
 }
