--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -67171,7 +67171,6 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   border-collapse: collapse !important;
   border-spacing: 0px !important;
 }
-
 ._12fun97 {
   box-sizing: border-box !important;
   cursor: pointer !important;
@@ -69902,4 +69901,317 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 
 ._1xku4ev {
   border-bottom: 1px solid rgb(221, 221, 221) !important;
+}
+
+._jibw4hu {
+    background-color: rgb(255, 255, 255) !important;
+    padding: 12px 0px !important;
+    overflow: hidden !important;
+    z-index: 10 !important;
+    position: absolute !important;
+    box-shadow: rgb(0 0 0 / 28%) 0px 8px 28px !important;
+    border-radius: 8px !important;
+    margin-top: 8px !important;
+    width: calc(100% + 32px) !important;
+    margin-left: -16px !important;
+}
+
+._1qyrju2y {
+    cursor: pointer !important;
+    display: flex !important;
+    list-style-type: none !important;
+    width: 100% !important;
+    color: rgb(34, 34, 34) !important;
+    font-size: 16px !important;
+    line-height: 20px !important;
+    background-color: rgb(247, 247, 247) !important;
+    padding: 12px 16px !important;
+}
+
+@media (min-width: 744px) {
+  ._1qyrju2y {
+      padding: 16px !important;
+  }
+}
+
+@media (min-width: 1128px) {
+  ._1qyrju2y {
+    padding: 16px 24px !important;
+  }
+}
+
+
+._fwc8j85 {
+    cursor: pointer !important;
+    display: flex !important;
+    list-style-type: none !important;
+    width: 100% !important;
+    color: rgb(34, 34, 34) !important;
+    font-size: 16px !important;
+    line-height: 20px !important;
+    padding: 12px 16px !important;
+}
+
+
+@media (min-width: 744px) {
+  ._fwc8j85 {
+    padding: 16px !important;
+  }
+}
+
+@media (min-width: 1128px) {
+  ._fwc8j85 {
+    padding: 16px 24px !important;
+  }
+}
+
+._1825a1k {
+  -webkit-box-pack: center !important;
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  width: 100% !important;
+  display: flex !important;
+  flex-direction: column !important;
+  justify-content: center !important;
+}
+
+._1ldjf5n6 {
+  position: absolute !important;
+  line-height: normal !important;
+  z-index: 10 !important;
+  top: 60px !important;
+  left: 0px !important;
+}
+
+._1ldjf5n6::before {
+  content: " " !important;
+  display: table !important;
+}
+
+._1ldjf5n6::after {
+  content: " " !important;
+  display: table !important;
+  clear: both !important;
+}
+
+._1kx9xc9o {
+  position: relative !important;
+  text-align: left !important;
+  background: rgb(255, 255, 255) !important;
+  box-shadow: rgb(0 0 0 / 5%) 0px 2px 6px, rgb(0 0 0 / 7%) 0px 0px 0px 1px !important;
+  border-radius: 3px !important;
+}
+
+._txa8fll {
+  position: relative !important;
+  margin-left: 9px !important;
+}
+
+._14676s3 {
+  outline: none !important;
+}
+
+._vik423 {
+  color: rgb(117, 117, 117) !important;
+  position: absolute !important;
+  top: 62px !important;
+  z-index: 2 !important;
+  text-align: left !important;
+}
+
+._95z1rt {
+  list-style: none !important;
+  margin: 1px 0px !important;
+  padding-left: 0px !important;
+  padding-right: 0px !important;
+  font-size: 14px !important;
+}
+
+._5gtns3 {
+  display: inline-block !important;
+  text-align: center !important;
+}
+
+._17w2za {
+  position: relative !important;
+  z-index: 2 !important;
+  height: 0px !important;
+}
+
+._owpl6c4 {
+  cursor: pointer !important;
+  user-select: none !important;
+  border: 0px !important;
+  padding: 0px !important;
+  margin: 0px !important;
+}
+
+.cdfgcv7[class][class] {
+  position: absolute;
+  top: 8px;
+}
+
+.dir.cdfgcv7[class][class] {
+  padding: 16px;
+}
+
+.dir-ltr.lmdj8uz[class][class] {
+  left: 24px;
+}
+
+._oda838 {
+  appearance: none !important;
+  display: inline-block !important;
+  border-radius: 50% !important;
+  border: none !important;
+  outline: none !important;
+  margin: 0px !important;
+  padding: 0px !important;
+  color: rgb(34, 34, 34) !important;
+  cursor: pointer !important;
+  touch-action: manipulation !important;
+  position: relative !important;
+  background: transparent !important;
+  transition: -ms-transform 0.25s ease 0s, -webkit-transform 0.25s ease 0s, transform 0.25s ease 0s !important;
+}
+
+._oda838::before {
+  content: "" !important;
+  display: block !important;
+  position: absolute !important;
+  top: 50% !important;
+  left: 50% !important;
+  transform: translate(-50%, -50%) !important;
+  width: 32px !important;
+  height: 32px !important;
+  border-radius: 50% !important;
+}
+
+._754zdu7 {
+  background: rgb(255, 255, 255) !important;
+  text-align: left !important;
+  z-index: 0 !important;
+  position: absolute !important;
+  left: 9px !important;
+} 
+
+._fdp53bg {
+  display: inline-block !important;
+  vertical-align: top !important;
+  min-height: 100% !important;
+  position: absolute !important;
+  z-index: -1 !important;
+  opacity: 0 !important;
+  pointer-events: none !important;
+  visibility: hidden !important;
+}
+
+._1lds9wb {
+  display: inline-block !important;
+  vertical-align: top !important;
+  min-height: 100% !important;
+}
+
+._kuxo8ai {
+  display: inline-block !important;
+  vertical-align: top !important;
+  min-height: 100% !important;
+  visibility: hidden !important;
+}
+
+._1svux14 {
+  background: rgb(255, 255, 255) !important;
+  text-align: center !important;
+  vertical-align: top !important;
+  user-select: none !important;
+}
+
+._gucugi {
+  color: rgb(72, 72, 72) !important;
+  font-size: 18px !important;
+  text-align: center !important;
+  padding-top: 22px !important;
+  padding-bottom: 37px !important;
+  caption-side: initial !important;
+}
+
+.m7butn[class][class] {
+  font-weight: 400;
+  font-size: 16px;
+  font-family: 24px;
+  color: #222;
+}
+
+._cvkwaj {
+  border-collapse: separate !important;
+}
+
+._z39f86g {
+  box-sizing: border-box !important;
+  font-size: 14px !important;
+  text-align: center !important;
+  cursor: default !important;
+}
+
+.dg7nl1z[class][class] {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.dg7nl1z[class][class] {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.d1x65u59[class][class] {
+  color: #222;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.b1frohhd[class][class] {
+  color: #484848;
+  opacity: 0.25;
+}
+
+.dir.d1x65u59[class][class] {
+  border: 1.5px solid var(--f-mkcy-f);
+  border-radius: 100%;
+}
+
+.d1lzmjwf[class][class] {
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 400;
+}
+
+._1svux14 {
+  background: rgb(255, 255, 255) !important;
+  text-align: center !important;
+  vertical-align: top !important;
+  user-select: none !important;
+}
+
+._1svux14 {
+  background: rgb(255, 255, 255) !important;
+  text-align: center !important;
+  vertical-align: top !important;
+  user-select: none !important;
+}
+
+.cdfgcv7[class][class] {
+  position: absolute;
+  top: 8px;
+}
+
+.dir.cdfgcv7[class][class] {
+  padding: 16px;
+}
+
+.dir-ltr.rgl4t1u[class][class] {
+  right: 24px;
 }
